--- a/.scalafix.conf
+++ b/.scalafix.conf
@@ -1,17 +1,15 @@
 rules = [
-  OrganizeImports,
-  ExplicitResultTypes,
-  RemoveUnused
+  DisableSyntax
 ]
 
-RemoveUnused.imports = false
-
-OrganizeImports.groupedImports = Explode
-OrganizeImports.expandRelative = true
-OrganizeImports.removeUnused = true
-OrganizeImports.groups = [
-  "re:javax?\."
-  "scala."
-  "scala.meta."
-  "*"
-]
+DisableSyntax.noVars = true
+DisableSyntax.noThrows = true
+DisableSyntax.noNulls = true
+DisableSyntax.noReturns = true
+DisableSyntax.noWhileLoops = true
+DisableSyntax.noAsInstanceOf = true
+DisableSyntax.noIsInstanceOf = true
+DisableSyntax.noXml = true
+DisableSyntax.noDefaultArgs = true
+DisableSyntax.noFinalVal = true
+DisableSyntax.noFinalize = true
