--- a/.scalafix.conf
+++ b/.scalafix.conf
@@ -1,5 +1,8 @@
 rules = [
-  DisableSyntax
+  DisableSyntax,
+  LeakingImplicitClassVal,
+  RedundantSyntax,
+  // RemoveUnused - ToDo: https://scalacenter.github.io/scalafix/docs/rules/RemoveUnused.html
 ]
 
 DisableSyntax.noVars = true
