Move scala folder to docs

--- a/docs/scala/directory.conf
+++ b/docs/scala/directory.conf
@@ -9,20 +9,9 @@ laika.navigationOrder = [
   repl.md
   types.md
   structures.md
-  structures/ifelse.md
-  structures/for.md
-  structures/match.md
-  structures/others.md
+  structures
   modeling.md
-  modeling/classes.md
-  modeling/objects.md
-  modeling/companion-objects.md
-  modeling/traits.md
-  modeling/abstract-class.md
-  modeling/enums.md
-  modeling/case-class.md
-  modeling/oop.md
-  modeling/fp.md
+  modeling
   methods.md
   methods/method-features.md
   methods/default-parameters.md
