Move scala folder to docs

--- a/docs/scala/directory.conf
+++ b/docs/scala/directory.conf
@@ -13,15 +13,7 @@ laika.navigationOrder = [
   modeling.md
   modeling
   methods.md
-  methods/method-features.md
-  methods/default-parameters.md
-  methods/named-parameters.md
-  methods/by-name-parameter.md
-  methods/partially-applied-functions.md
-  methods/vararg-parameters.md
-  methods/generic-parameter.md
-  methods/extension-methods.md
-  methods/main-methods.md
+  methods
   functions.md
   functions/anonymous.md
   functions/variables.md
