Move scala folder to docs

--- a/docs/scala/directory.conf
+++ b/docs/scala/directory.conf
@@ -15,27 +15,11 @@ laika.navigationOrder = [
   methods.md
   methods
   functions.md
-  functions/anonymous.md
-  functions/variables.md
-  functions/eta.md
-  functions/hofs.md
-  functions/write-map.md
-  functions/returns-function.md
+  functions
   packaging.md
   toplevel-definitions.md
   collections.md
-  collections/classes.md
-  collections/list.md
-  collections/lazylist.md
-  collections/array-seq.md
-  collections/vector.md
-  collections/array-buffer.md
-  collections/maps.md
-  collections/set.md
-  collections/range.md
-  collections/tuple.md
-  collections/queue.md
-  collections/methods.md
+  collections
   fp.md
   fp/what-is-fp.md
   fp/immutable-values.md
