Move scala folder to docs

--- a/docs/scala/directory.conf
+++ b/docs/scala/directory.conf
@@ -21,27 +21,9 @@ laika.navigationOrder = [
   collections.md
   collections
   fp.md
-  fp/what-is-fp.md
-  fp/immutable-values.md
-  fp/pure-functions.md
-  fp/functions-are-values.md
-  fp/functional-error-handling.md
+  fp
   type-system.md
-  type-system/types-inferred.md
-  type-system/types-generics.md
-  type-system/upper-type-bounds.md
-  type-system/lower-type-bounds.md
-  type-system/types-intersection.md
-  type-system/types-union.md
-  type-system/types-adts.md
-  type-system/types-variance.md
-  type-system/types-opaque.md
-  type-system/types-structural.md
-  type-system/types-dependent-function.md
-  type-system/type-lambdas.md
-  type-system/match-types.md
-  type-system/polymorphic-function-types.md
-  type-system/types-others.md
+  type-system
   abstractions.md
   abstractions/ca-given.md
   abstractions/ca-using.md
