Move scala folder to docs

--- a/docs/scala/directory.conf
+++ b/docs/scala/directory.conf
@@ -25,18 +25,7 @@ laika.navigationOrder = [
   type-system.md
   type-system
   abstractions.md
-  abstractions/ca-given.md
-  abstractions/ca-using.md
-  abstractions/type-classes.md
-  abstractions/ca-context-bounds.md
-  abstractions/ca-given-imports.md
-  abstractions/ca-extension-methods.md
-  abstractions/ca-type-classes.md
-  abstractions/ca-type-class-derivation.md
-  abstractions/ca-multiversal-equality.md
-  abstractions/context-functions.md
-  abstractions/ca-implicit-conversions.md
-  abstractions/ca-by-name-parameters.md
+  abstractions
   details.md
   details/export-causes.md
   details/parameter-untupling.md
