Move scala folder to docs

--- a/docs/scala/directory.conf
+++ b/docs/scala/directory.conf
@@ -27,14 +27,10 @@ laika.navigationOrder = [
   abstractions.md
   abstractions
   details.md
-  details/export-causes.md
-  details/parameter-untupling.md
-  details/type-test.md
-  details/pattern-matching.md
+  details
   concurrency.md
   tools.md
-  tools/tools-sbt.md
-  tools/tools-worksheets.md
+  tools
   with_java.md
   metaprogramming.md
   metaprogramming/inline.md
