Move scala folder to docs

--- a/docs/scala/directory.conf
+++ b/docs/scala/directory.conf
@@ -33,21 +33,8 @@ laika.navigationOrder = [
   tools
   with_java.md
   metaprogramming.md
-  metaprogramming/inline.md
-  metaprogramming/compile-time-ops.md
-  metaprogramming/macros.md
-  metaprogramming/quoted-code.md
-  metaprogramming/runtime-staging.md
-  metaprogramming/reflection.md
-  metaprogramming/tasty-inspection.md
+  metaprogramming
   soft-keywords.md
   scaladoc.md
-  scaladoc/docstrings.md
-  scaladoc/linking.md
-  scaladoc/static-site.md
-  scaladoc/blog.md
-  scaladoc/site-versioning.md
-  scaladoc/search-engine.md
-  scaladoc/snippet-compiler.md
-  scaladoc/settings.md
+  scaladoc
 ]
