--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,27 +16,16 @@ on:
 env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-
-concurrency:
-  group: ${{ github.workflow }} @ ${{ github.ref }}
-  cancel-in-progress: true
-
 jobs:
   build:
     name: Build and Test
     strategy:
       matrix:
-        os: [windows-latest]
-        scala: [3]
+        os: [ubuntu-latest]
+        scala: [3.2.2]
         java: [temurin@11]
     runs-on: ${{ matrix.os }}
-    timeout-minutes: 60
     steps:
-      - name: Ignore line ending differences in git
-        if: contains(runner.os, 'windows')
-        shell: bash
-        run: git config --global core.autocrlf false
-
       - name: Checkout current branch (full)
         uses: actions/checkout@v3
         with:
@@ -51,26 +40,29 @@ jobs:
           java-version: 11
 
       - name: Setup Java (temurin@11)
-        id: setup-java-temurin-11
         if: matrix.java == 'temurin@11'
         uses: actions/setup-java@v3
         with:
           distribution: jdkfile
           java-version: 11
           jdkFile: ${{ steps.download-java-temurin-11.outputs.jdkFile }}
-          cache: sbt
 
-      - name: sbt update
-        if: matrix.java == 'temurin@11' && steps.setup-java-temurin-11.outputs.cache-hit == 'false'
-        shell: bash
-        run: sbt '++ ${{ matrix.scala }}' reload +update
+      - name: Cache sbt
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.sbt
+            ~/.ivy2/cache
+            ~/.coursier/cache/v1
+            ~/.cache/coursier/v1
+            ~/AppData/Local/Coursier/Cache/v1
+            ~/Library/Caches/Coursier/v1
+          key: ${{ runner.os }}-sbt-cache-v2-${{ hashFiles('**/*.sbt') }}-${{ hashFiles('project/build.properties') }}
 
       - name: Check that workflows are up to date
-        shell: bash
         run: sbt githubWorkflowCheck
 
       - name: Build project
-        shell: bash
         run: sbt '++ ${{ matrix.scala }}' test
 
   site:
@@ -82,10 +74,6 @@ jobs:
         java: [temurin@11]
     runs-on: ${{ matrix.os }}
     steps:
-      - name: Ignore line ending differences in git
-        if: contains(runner.os, 'windows')
-        run: git config --global core.autocrlf false
-
       - name: Checkout current branch (full)
         uses: actions/checkout@v3
         with:
@@ -100,18 +88,24 @@ jobs:
           java-version: 11
 
       - name: Setup Java (temurin@11)
-        id: setup-java-temurin-11
         if: matrix.java == 'temurin@11'
         uses: actions/setup-java@v3
         with:
           distribution: jdkfile
           java-version: 11
           jdkFile: ${{ steps.download-java-temurin-11.outputs.jdkFile }}
-          cache: sbt
 
-      - name: sbt update
-        if: matrix.java == 'temurin@11' && steps.setup-java-temurin-11.outputs.cache-hit == 'false'
-        run: sbt '++ ${{ matrix.scala }}' reload +update
+      - name: Cache sbt
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.sbt
+            ~/.ivy2/cache
+            ~/.coursier/cache/v1
+            ~/.cache/coursier/v1
+            ~/AppData/Local/Coursier/Cache/v1
+            ~/Library/Caches/Coursier/v1
+          key: ${{ runner.os }}-sbt-cache-v2-${{ hashFiles('**/*.sbt') }}-${{ hashFiles('project/build.properties') }}
 
       - name: Generate site
         run: sbt '++ ${{ matrix.scala }}' docs/tlSite
@@ -121,5 +115,5 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3.9.0
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: site\target\docs\site
+          publish_dir: site/target/docs/site
           keep_files: true
