Move books folder to docs

--- a/docs/books/sicp/directory.conf
+++ b/docs/books/sicp/directory.conf
@@ -2,7 +2,19 @@ laika.title = Structure and Interpretation
 
 laika.navigationOrder = [
   index.md
-  chapter1
+  chapter1_1_6.md
+  chapter1_1_7.md
+  chapter1_1_8.md
+  chapter1_2_1.md
+  chapter1_2_2.md
+  chapter1_2_3.md
+  chapter1_2_4.md
+  chapter1_2_5.md
+  chapter1_2_6.md
+  chapter1_3_1.md
+  chapter1_3_2.md
+  chapter1_3_3.md
+  chapter1_3_4.md
 ]
 
 
