Add Decomposition's article

--- a/docs/blog/directory.conf
+++ b/docs/blog/directory.conf
@@ -1,5 +1,6 @@
 laika.title = Блог
 
 laika.navigationOrder = [
-  2023-01-09-architecture-problems.md
+  architecture-problems.md
+  decomposition_in_Scala_3.md
 ]
