Add Builder article

--- a/docs/blog/directory.conf
+++ b/docs/blog/directory.conf
@@ -3,5 +3,5 @@ laika.title = Блог
 laika.navigationOrder = [
   architecture-problems.md
   decomposition.md
-  docs/blog/builder-pattern.md
+  builder-pattern.md
 ]
